--- a/public/download.html
+++ b/public/download.html
@@ -5,122 +5,225 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Download Ready</title>
 		<style>
-			@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
+			@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
+
 			* {
 				margin: 0;
 				padding: 0;
 				box-sizing: border-box;
 			}
+
 			body {
 				min-height: 100vh;
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				font-family: "Space Mono", monospace;
-				background: linear-gradient(
-					135deg,
-					#0f0f23 0%,
-					#1a1a3e 50%,
-					#0f0f23 100%
-				);
+				font-family: "Inter", -apple-system, BlinkMacSystemFont,
+					sans-serif;
+				background: #111216;
 			}
+
+			.header {
+				position: absolute;
+				top: 24px;
+				left: 24px;
+				display: flex;
+				align-items: center;
+				gap: 12px;
+			}
+
+			.logo {
+				height: 32px;
+			}
+
+			.header-title {
+				color: #f9f9f9;
+				font-size: 24px;
+				font-weight: 600;
+			}
+
 			.container {
 				text-align: center;
-				padding: 3rem;
-				background: rgba(255, 255, 255, 0.03);
-				border: 1px solid rgba(255, 255, 255, 0.1);
-				border-radius: 24px;
-				backdrop-filter: blur(10px);
-				box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-				max-width: 500px;
+				padding: 2.5rem;
+				background: #1f2024;
+				border-radius: 8px;
+				max-width: 520px;
+				width: 90%;
 			}
-			h1 {
-				color: #00ff88;
-				font-size: 2rem;
-				margin-bottom: 0.5rem;
-				text-shadow: 0 0 30px rgba(0, 255, 136, 0.3);
-			}
-			.filename {
-				color: #888;
-				font-size: 0.9rem;
+
+			.viewer-container {
+				width: 100%;
+				height: 250px;
+				background: #26272c;
+				border: 1px solid #404146;
+				border-radius: 8px;
 				margin-bottom: 1.5rem;
-				word-break: break-all;
+				overflow: hidden;
+				position: relative;
 			}
+
+			#viewer {
+				width: 100%;
+				height: 100%;
+			}
+
+			.viewer-loading {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				color: #a3a3a3;
+				font-size: 0.875rem;
+			}
+
+			h1 {
+				color: #f9f9f9;
+				font-size: 1.25rem;
+				font-weight: 600;
+				margin-bottom: 0.5rem;
+			}
+
+			.file-info {
+				margin-bottom: 1.5rem;
+			}
+
+			.filename {
+				color: #a3a3a3;
+				font-size: 0.875rem;
+				word-break: break-all;
+				margin-bottom: 0.25rem;
+			}
+
+			.vertex-count {
+				color: #666;
+				font-size: 0.75rem;
+			}
+
 			.format-selector {
 				margin-bottom: 1.5rem;
 			}
+
 			.format-label {
-				color: #888;
-				font-size: 0.8rem;
+				color: #a3a3a3;
+				font-size: 0.75rem;
+				font-weight: 500;
 				margin-bottom: 0.75rem;
 				display: block;
+				text-transform: uppercase;
+				letter-spacing: 0.05em;
 			}
+
 			.format-buttons {
 				display: flex;
 				gap: 0.5rem;
 				justify-content: center;
+				background: #2d2d2d;
+				padding: 4px;
+				border-radius: 6px;
 			}
+
 			.format-btn {
-				padding: 0.5rem 1rem;
-				font-family: "Space Mono", monospace;
-				font-size: 0.85rem;
-				font-weight: 700;
-				color: #888;
-				background: rgba(255, 255, 255, 0.05);
-				border: 1px solid rgba(255, 255, 255, 0.2);
-				border-radius: 8px;
-				cursor: pointer;
-				transition: all 0.2s ease;
-				text-transform: uppercase;
-			}
-			.format-btn:hover {
-				border-color: #00ff88;
-				color: #00ff88;
-			}
-			.format-btn.active {
-				background: rgba(0, 255, 136, 0.15);
-				border-color: #00ff88;
-				color: #00ff88;
-			}
-			.download-btn {
-				display: inline-block;
-				padding: 1rem 2.5rem;
-				font-family: "Space Mono", monospace;
-				font-size: 1rem;
-				font-weight: 700;
-				color: #0f0f23;
-				background: linear-gradient(135deg, #00ff88 0%, #00cc6a 100%);
+				padding: 0.5rem 1.25rem;
+				font-family: inherit;
+				font-size: 0.875rem;
+				font-weight: 500;
+				color: #a3a3a3;
+				background: transparent;
 				border: none;
-				border-radius: 12px;
+				border-radius: 4px;
+				cursor: pointer;
+				transition: all 0.15s ease;
+			}
+
+			.format-btn:hover {
+				color: #f9f9f9;
+				background: #3d3d3d;
+			}
+
+			.format-btn.active {
+				background: #4b5bf9;
+				color: #f9f9f9;
+			}
+
+			.download-btn {
+				display: inline-flex;
+				align-items: center;
+				gap: 0.5rem;
+				padding: 0.75rem 1.5rem;
+				font-family: inherit;
+				font-size: 0.875rem;
+				font-weight: 600;
+				color: #f9f9f9;
+				background: #4b5bf9;
+				border: none;
+				border-radius: 6px;
 				cursor: pointer;
 				text-decoration: none;
-				text-transform: uppercase;
-				letter-spacing: 2px;
-				transition: all 0.3s ease;
+				transition: all 0.15s ease;
 			}
+
 			.download-btn:hover {
-				transform: translateY(-3px);
-				box-shadow: 0 15px 35px rgba(0, 255, 136, 0.4);
+				background: #3a4ad8;
 			}
+
+			.download-btn svg {
+				width: 16px;
+				height: 16px;
+			}
+
 			.error {
-				color: #ff4466;
+				color: #f87171;
+				font-size: 0.875rem;
+				padding: 0.75rem 1rem;
+				background: rgba(248, 113, 113, 0.1);
+				border-radius: 6px;
 			}
+
 			.loading {
-				color: #888;
+				color: #a3a3a3;
+			}
+
+			.divider {
+				height: 1px;
+				background: #2d2d2d;
+				margin: 1.5rem 0;
+			}
+
+			.footer-text {
+				color: #666;
+				font-size: 0.75rem;
 			}
 		</style>
 	</head>
 	<body>
+		<div class="header">
+			<img src="/roblox.webp" alt="Roblox" class="logo" />
+			<span class="header-title">3D Model Exporter</span>
+		</div>
 		<div class="container">
-			<h1>📦 Your File is Ready</h1>
-			<p class="filename" id="filename">Loading...</p>
+			<h1>Your File is Ready</h1>
+			<div class="file-info">
+				<p class="filename" id="filename">Loading...</p>
+				<span
+					class="vertex-count"
+					id="vertexCount"
+					style="display: none"
+				></span>
+			</div>
+
+			<div class="viewer-container">
+				<div id="viewer"></div>
+				<div class="viewer-loading" id="viewerLoading">
+					Loading 3D model...
+				</div>
+			</div>
 
 			<div
 				class="format-selector"
 				id="formatSelector"
 				style="display: none"
 			>
-				<span class="format-label">Choose format:</span>
+				<span class="format-label">Choose format</span>
 				<div class="format-buttons">
 					<button class="format-btn active" data-format="obj">
 						OBJ
@@ -135,21 +238,195 @@
 				class="download-btn"
 				id="downloadBtn"
 				style="display: none"
-				>Download</a
 			>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke="currentColor"
+					stroke-width="2"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
+					/>
+				</svg>
+				Download
+			</a>
+
 			<p class="error" id="error" style="display: none"></p>
+
+			<div class="divider" id="divider" style="display: none"></div>
+			<p class="footer-text" id="footerText" style="display: none">
+				Link expires in 1 hour
+			</p>
 		</div>
 
-		<script>
+		<script type="importmap">
+			{
+				"imports": {
+					"three": "https://unpkg.com/three@0.170.0/build/three.module.js",
+					"three/addons/": "https://unpkg.com/three@0.170.0/examples/jsm/"
+				}
+			}
+		</script>
+		<script type="module">
+			import * as THREE from "three";
+			import { OBJLoader } from "three/addons/loaders/OBJLoader.js";
+			import { OrbitControls } from "three/addons/controls/OrbitControls.js";
+
 			const token = window.location.pathname.split("/").pop();
 			const filenameEl = document.getElementById("filename");
 			const downloadBtn = document.getElementById("downloadBtn");
 			const errorEl = document.getElementById("error");
 			const formatSelector = document.getElementById("formatSelector");
 			const formatBtns = document.querySelectorAll(".format-btn");
+			const divider = document.getElementById("divider");
+			const footerText = document.getElementById("footerText");
+			const viewerEl = document.getElementById("viewer");
+			const viewerLoading = document.getElementById("viewerLoading");
+			const vertexCountEl = document.getElementById("vertexCount");
 
 			let baseName = "";
 			let selectedFormat = "obj";
+
+			// Three.js setup
+			let scene, camera, renderer, controls;
+
+			function initThree() {
+				scene = new THREE.Scene();
+				scene.background = new THREE.Color(0x26272c);
+
+				const container = viewerEl;
+				const width = container.clientWidth;
+				const height = container.clientHeight;
+
+				camera = new THREE.PerspectiveCamera(
+					45,
+					width / height,
+					0.1,
+					1000
+				);
+				camera.position.set(0, 0, 5);
+
+				renderer = new THREE.WebGLRenderer({ antialias: true });
+				renderer.setSize(width, height);
+				renderer.setPixelRatio(window.devicePixelRatio);
+				container.appendChild(renderer.domElement);
+
+				controls = new OrbitControls(camera, renderer.domElement);
+				controls.enableDamping = true;
+				controls.dampingFactor = 0.05;
+				controls.enableZoom = true;
+				controls.zoomSpeed = 1.2;
+				controls.minDistance = 0.5;
+				controls.maxDistance = 20;
+
+				// Lighting
+				const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+				scene.add(ambientLight);
+
+				const directionalLight = new THREE.DirectionalLight(
+					0xffffff,
+					0.8
+				);
+				directionalLight.position.set(5, 10, 7.5);
+				scene.add(directionalLight);
+
+				const directionalLight2 = new THREE.DirectionalLight(
+					0xffffff,
+					0.4
+				);
+				directionalLight2.position.set(-5, -5, -5);
+				scene.add(directionalLight2);
+
+				animate();
+
+				window.addEventListener("resize", onWindowResize);
+			}
+
+			function onWindowResize() {
+				const width = viewerEl.clientWidth;
+				const height = viewerEl.clientHeight;
+				camera.aspect = width / height;
+				camera.updateProjectionMatrix();
+				renderer.setSize(width, height);
+			}
+
+			function animate() {
+				requestAnimationFrame(animate);
+				controls.update();
+				renderer.render(scene, camera);
+			}
+
+			function fitCameraToObject(
+				camera,
+				object,
+				controls,
+				offset = 1.25
+			) {
+				const box = new THREE.Box3().setFromObject(object);
+				const center = new THREE.Vector3();
+				const size = new THREE.Vector3();
+				box.getCenter(center);
+				box.getSize(size);
+
+				const maxDim = Math.max(size.x, size.y, size.z);
+				const fov = camera.fov * (Math.PI / 180);
+				let cameraZ = Math.abs(maxDim / 2 / Math.tan(fov / 2));
+				cameraZ *= offset;
+
+				const direction = new THREE.Vector3()
+					.subVectors(camera.position, center)
+					.normalize();
+				camera.position
+					.copy(center)
+					.addScaledVector(direction, cameraZ);
+
+				if (controls) {
+					controls.target.copy(center);
+					controls.maxDistance = cameraZ * 10;
+					controls.update();
+				} else {
+					camera.lookAt(center);
+				}
+				camera.updateProjectionMatrix();
+			}
+
+			function loadOBJ(objContent) {
+				const loader = new OBJLoader();
+				const object = loader.parse(objContent);
+
+				// Apply material
+				object.traverse((child) => {
+					if (child.isMesh) {
+						child.material = new THREE.MeshStandardMaterial({
+							color: 0x4b5bf9,
+							metalness: 0.3,
+							roughness: 0.7,
+						});
+					}
+				});
+
+				scene.add(object);
+
+				// Count vertices
+				let totalVertices = 0;
+				object.traverseVisible(function (child) {
+					if (child.isMesh) {
+						const geometry = child.geometry;
+						totalVertices += geometry.attributes.position.count;
+					}
+				});
+				vertexCountEl.textContent = `${totalVertices.toLocaleString()} vertices`;
+				vertexCountEl.style.display = "block";
+
+				// Fit camera to the object
+				fitCameraToObject(camera, object, controls);
+
+				viewerLoading.style.display = "none";
+			}
 
 			function updateDownload() {
 				filenameEl.textContent = `${baseName}.${selectedFormat}`;
@@ -165,6 +442,9 @@
 				});
 			});
 
+			// Initialize Three.js
+			initThree();
+
 			fetch(`/api/download-info/${token}`)
 				.then(async (res) => {
 					const json = await res.json();
@@ -177,10 +457,18 @@
 					baseName = data.fileName.replace(/\.[^/.]+$/, "");
 					updateDownload();
 					formatSelector.style.display = "block";
-					downloadBtn.style.display = "inline-block";
+					downloadBtn.style.display = "inline-flex";
+					divider.style.display = "block";
+					footerText.style.display = "block";
+
+					// Load the OBJ model
+					if (data.objContent) {
+						loadOBJ(data.objContent);
+					}
 				})
 				.catch((err) => {
 					filenameEl.style.display = "none";
+					viewerLoading.textContent = "Failed to load model";
 					errorEl.textContent = err.message;
 					errorEl.style.display = "block";
 				});
