Reduce expiration time

--- a/public/download.html
+++ b/public/download.html
@@ -259,7 +259,7 @@
 
 			<div class="divider" id="divider" style="display: none"></div>
 			<p class="footer-text" id="footerText" style="display: none">
-				Link expires in 1 hour
+				Link expires in 10 minutes
 			</p>
 		</div>
 
