--- a/public/download.html
+++ b/public/download.html
@@ -382,9 +382,8 @@
 				offset = 1.25
 			) {
 				const box = new THREE.Box3().setFromObject(object);
-				const center = new THREE.Vector3();
+				const center = new THREE.Vector3(0, 0, 0);
 				const size = new THREE.Vector3();
-				box.getCenter(center);
 				box.getSize(size);
 
 				const maxDim = Math.max(size.x, size.y, size.z);
