--- a/public/download.html
+++ b/public/download.html
@@ -329,19 +329,19 @@
 				controls.maxDistance = 20;
 
 				// Lighting
-				const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
+				const ambientLight = new THREE.AmbientLight(0xffffff, 0.7);
 				scene.add(ambientLight);
 
 				const directionalLight = new THREE.DirectionalLight(
 					0xffffff,
-					1.2
+					0.9
 				);
 				directionalLight.position.set(5, 10, 7.5);
 				scene.add(directionalLight);
 
 				const directionalLight2 = new THREE.DirectionalLight(
 					0xffffff,
-					0.8
+					0.5
 				);
 				directionalLight2.position.set(-5, -5, -5);
 				scene.add(directionalLight2);
@@ -416,9 +416,9 @@
 				object.traverse((child) => {
 					if (child.isMesh) {
 						child.material = new THREE.MeshStandardMaterial({
-							color: 0x4b5bf9,
-							metalness: 0.3,
-							roughness: 0.7,
+							color: 0xffffff,
+							metalness: 0.1,
+							roughness: 0.8,
 						});
 					}
 				});
