--- a/public/download.html
+++ b/public/download.html
@@ -328,20 +328,20 @@
 				controls.minDistance = 0.5;
 				controls.maxDistance = 20;
 
-				// Lighting
-				const ambientLight = new THREE.AmbientLight(0xffffff, 0.7);
+				// Lighting - harsh for edge visibility
+				const ambientLight = new THREE.AmbientLight(0xffffff, 0.3);
 				scene.add(ambientLight);
 
 				const directionalLight = new THREE.DirectionalLight(
 					0xffffff,
-					0.9
+					1.5
 				);
 				directionalLight.position.set(5, 10, 7.5);
 				scene.add(directionalLight);
 
 				const directionalLight2 = new THREE.DirectionalLight(
 					0xffffff,
-					0.5
+					0.8
 				);
 				directionalLight2.position.set(-5, -5, -5);
 				scene.add(directionalLight2);
